<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main_taxi_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="77dp"
                    android:layout_height="77dp"
                    android:layout_marginTop="48dp"
                    android:contentDescription="@string/nav_header_desc"
                    app:srcCompat="@drawable/ic_logo_nav" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="36dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_taximer_logo" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_div" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/notificationSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/label_notification"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_div" />

                <TextView
                    android:id="@+id/shareAppView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:padding="16dp"
                    android:text="@string/label_share_app"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_div" />

                <TextView
                    android:id="@+id/markAppView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:padding="16dp"
                    android:text="@string/label_mark_app"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_div" />

                <TextView
                    android:id="@+id/feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:padding="16dp"
                    android:text="@string/label_feedback"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_div"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/appVersionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_margin="16dp"
                android:textColor="@android:color/black" />
        </FrameLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
