<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="@drawable/rounded_bottom_dialog"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/coloredContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/small_divider"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/ic_icon_pickup_small" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:focusableInTouchMode="true"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView5">

            <ru.taximer.taxiandroid.ui.widget.ClearableEditText
                android:id="@+id/fromBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:allowUndo="false"
                android:background="@drawable/bottom_sheet_shape"
                android:drawableRight="@drawable/places_ic_clear"
                android:gravity="center_vertical"
                android:hint="@string/label_from"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColorHint="@android:color/black" />
        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView2"
            app:srcCompat="@drawable/ic_icon_marker_yellow" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="right|center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:focusableInTouchMode="true"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/list_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <ru.taximer.taxiandroid.ui.widget.ClearableEditText
                android:id="@+id/toBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:allowUndo="false"
                android:background="@drawable/bottom_sheet_shape"
                android:drawableRight="@drawable/places_ic_clear"
                android:gravity="center_vertical"
                android:hint="@string/label_to"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColorHint="@android:color/black" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/closePopupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="Закрыть"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:text="@string/no_such_address"
            android:textColor="#c8c7cc"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_400" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ru.taximer.taxiandroid.ui.widget.EmptyRecyclerView
            android:id="@+id/autocompleteAddresses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ru.taximer.taxiandroid.ui.widget.EmptyRecyclerView>

        <Button
            android:id="@+id/manualSelectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#fff"
            android:drawableLeft="@drawable/ic_icon_marker_yellow"
            android:drawablePadding="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="Указать на карте"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="visible" />
    </RelativeLayout>


    <!--<TextView-->
        <!--android:id="@+id/showOnMapBtn"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:drawableStart="@drawable/ic_icon_marker_yellow"-->
        <!--android:drawablePadding="8dp"-->
        <!--android:padding="16dp"-->
        <!--android:text="@string/show_on_map_text"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="16sp" />-->

</android.support.v7.widget.LinearLayoutCompat>